    - Removed `c.t.io.Buf.ByteArray.apply`, replace usage with `Buf.ByteArray.Owned.apply`.
    - Removed `c.t.io.Buf.ByteArray.unapply`, replace usage with `Buf.ByteArray.Owned.unapply`.
    - Removed `c.t.io.Buf.ByteBuffer.apply`, replace usage with `Buf.ByteBuffer.Owned.apply`.
    - Removed `c.t.io.Buf.toByteBuffer`, replace usage with `Buf.ByteBuffer.Owned.extract`.

6.33.0  2016-03-10

New Features:

  * util-core: AsyncSemaphore supports closing and draining of waiters via `fail`. ``RB_ID=807590``

  * util-core: Add convenience methods `force`, `size`, `sum`, and `withEffect` to `AsyncStream`.
    ``RB_ID=808411``

Bug Fixes:

  * util-core: Fix nested functions `AsyncStream.++` to avoid stack overflow. ``RB_ID=804408``

Deprecations:

  * util-core: `Future.rawException` is deprecated in favor of `Future.exception`.
    ``RB_ID=798223``

6.32.0  2016-02-03

New Features:

  * util-core: Add `Future.traverseSequentially`. Take a sequence and sequentially apply a function
    A => Future[B] to each item. ``RB_ID=785091``

6.31.0  2016-02-02

NOT RELEASED

6.30.0  2015-12-03

New Features:

  * util-core: Introduce an `AsyncMeter` for asynchronously rate limiting to a fixed rate over time.
    It can be used for smoothing out bursty traffic, or for slowing down access to a
    resource. ``RB_ID=756333``

  * util-core: Introduce a `TokenBucket` for helping to control the relative rates of two processes,
    or for smoothing out the rate of a single process. ``RB_ID=756333``

API Changes:

  * util-core: `Timer` now has final implementations for `schedule` which delegate
    to new protected `scheduleOnce` and `schedulePeriodically` methods. This is
    done to ensure that `Locals` are captured when the task is scheduled and
    then used when the task is run. Existing `Timer` implementations should rename
    their existing `schedule` methods to work with the new interface. ``RB_ID=755387``
